# SDL_slang

./: CMakeLists.txt  README.md
assets/: shader.slang
examples/basic/: CMakeLists.txt  main.cpp
include/: SDL_slang.h
src/: CMakeLists.txt  SDL_slang.cpp
